# baro

./: .gitignore  Cargo.toml  README.md  RELEASE-0.19.0.md  package-lock.json  package.json  prd.json
.github/workflows/: release.yml
crates/baro-tui/: Cargo.toml
crates/baro-tui/src/: app.rs  claude_runner.rs  config.rs  constants.rs  context.rs  dag.rs  events.rs  executor.rs  git.rs  main.rs  notification.rs  orchestrator_client.rs  theme.rs  ui.rs  utils.rs
crates/baro-tui/src/screens/: context.rs  execute.rs  execute_completion.rs  execute_dag.rs  execute_dashboard.rs  execute_stats.rs  mod.rs  planning.rs  review.rs  welcome.rs
